--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         p-2 w-[300px] overflow-y-auto text-center bg-gray-900 shadow h-screen">
         <div class="text-gray-100 text-xl">
           <div class="p-2.5 mt-1 flex items-center rounded-md ">
-            <i class="bi bi-app-indicator px-2 py-1 bg-blue-600 rounded-md"></i>
+            <i class="bi bi-app-indicator px-2 py-1 bg-white-600 rounded-md"></i>
             <h1 class="text-[15px]  ml-3 text-xl text-white-200 font-bold">Anto Pezzella
             </h1>
             <i class="bi bi-x ml-20 cursor-pointer lg:hidden" onclick="Openbar()"></i>
@@ -52,35 +52,20 @@
     
             <div class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
               <i class="bi bi-house-door-fill"></i>
-              <span class="text-[15px] ml-4 text-gray-200">Home</span>
+              <span class="text-[15px] ml-4 text-gray-200">Other Albums</span>
             </div>
             <div class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
-              <i class="bi bi-bookmark-fill"></i>
-              <span class="text-[15px] ml-4 text-gray-200">Bookmark</span>
+              <i class="bi bi-pencil-square"></i>
+              <span class="text-[15px] ml-4 text-gray-200">Edit Album</span>
             </div>
             <hr class="my-4 text-gray-600">
             <div class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
-              <i class="bi bi-envelope-fill"></i>
-              <span class="text-[15px] ml-4 text-gray-200">Messages</span>
-            </div>
-    
-            <div class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
-              <i class="bi bi-chat-left-text-fill"></i>
-              <div class="flex justify-between w-full items-center" onclick="dropDown()">
-                <span class="text-[15px] ml-4 text-gray-200">Chatbox</span>
-                <span class="text-sm rotate-180" id="arrow">
-                  <i class="bi bi-chevron-down"></i>
-                </span>
-              </div>
-            </div>
-            <div class=" leading-7 text-left text-sm font-thin mt-2 w-4/5 mx-auto" id="submenu">
-              <h1 class="cursor-pointer p-2 hover:bg-gray-700 rounded-md mt-1">Social</h1>
-              <h1 class="cursor-pointer p-2 hover:bg-gray-700 rounded-md mt-1">Personal</h1>
-              <h1 class="cursor-pointer p-2 hover:bg-gray-700 rounded-md mt-1">Friends</h1>
+              <i class="bi bi-plus-circle"></i>
+              <span class="text-[15px] ml-4 text-gray-200">Add songs</span>
             </div>
             <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
               <i class="bi bi-box-arrow-in-right"></i>
-              <span class="text-[15px] ml-4 text-gray-200">Logout</span>
+              <span class="text-[15px] ml-4 text-gray-200">Log out</span>
             </div>
           </div>
         </div>
