--- a/addSong.html
+++ b/addSong.html
@@ -85,8 +85,8 @@
   <div class="mb-3 contenedor">
       <label for="exampleFormControlInput1" class="form-label p-2">Link</label>
       <input type="text" class="form-control" id="exampleFormControlInput1">
-      <button type="button" class="btn btn-warning">Save</button>
-      <button type="button" class="btn btn-warning">Cancel</button>
+      <button type="button" class="boton btn-warning">Save</button>
+      <button type="button" class="boton btn-warning">Cancel</button>
     </div>
     
 </div>
