--- a/login.html
+++ b/login.html
@@ -14,7 +14,62 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
+    <script>
+      function dropDown() {
+        document.querySelector('#submenu').classList.toggle('hidden')
+        document.querySelector('#arrow').classList.toggle('rotate-0')
+      }
+      dropDown()
+  
+      function Openbar() {
+        document.querySelector('.sidebar').classList.toggle('left-[-300px]')
+      }
+    </script>
+
     <main>
+
+      <span class="absolute text-white text-4xl top-5 left-4 cursor-pointer" onclick="Openbar()">
+        <i class="bi bi-filter-left px-2 bg-gray-900 rounded-md"></i>
+      </span>
+      <div class="sidebar fixed top-0 bottom-0 lg:left-0 left-[-300px] duration-1000
+        p-2 w-[300px] overflow-y-auto text-center bg-gray-900 shadow h-screen">
+        <div class="text-gray-100 text-xl">
+          <div class="p-2.5 mt-1 flex items-center rounded-md ">
+            <i class="bi bi-app-indicator px-2 py-1 bg-white-600 rounded-md"></i>
+            <h1 class="text-[15px]  ml-3 text-xl text-white-200 font-bold">Anto Pezzella
+            </h1>
+            <i class="bi bi-x ml-20 cursor-pointer lg:hidden" onclick="Openbar()"></i>
+          </div>
+          <hr class="my-2 text-white-600">
+    
+          <div>
+            <div class="p-2.5 mt-3 flex items-center rounded-md 
+            px-4 duration-300 cursor-pointer  bg-gray-700">
+              <i class="bi bi-search text-sm"></i>
+              <input class="text-[15px] ml-4 w-full bg-transparent focus:outline-none" placeholder="Serach" />
+            </div>
+    
+            <div class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
+              <i class="bi bi-house-door-fill"></i>
+              <span class="text-[15px] ml-4 text-gray-200">Other Albums</span>
+            </div>
+            <div class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
+              <i class="bi bi-pencil-square"></i>
+              <span class="text-[15px] ml-4 text-gray-200">Edit Album</span>
+            </div>
+            <hr class="my-4 text-gray-600">
+            <div class="p-2.5 mt-2 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
+              <i class="bi bi-plus-circle"></i>
+              <span class="text-[15px] ml-4 text-gray-200">Add songs</span>
+            </div>
+            <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer  hover:bg-blue-600">
+              <i class="bi bi-box-arrow-in-right"></i>
+              <span class="text-[15px] ml-4 text-gray-200">Log out</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
         <form>
           <fieldset>
               <h3>Log In</h3>
